@@ -57,7 +57,6 @@ setup(name='Products.%s' % NAME,
           ],
       tests_require=[
           'zope.testing >= 3.7.0',
-          'zope.app.testing',
           ],
       extras_require=dict(
         test=[
